--- a/pset2-solutions.tex
+++ b/pset2-solutions.tex
@@ -172,9 +172,9 @@ as desired.
 
 By definition, we have that $\pE pq = 0$ for every sum-of-squares polynomial $q$ such that the degree of $pq$ is at most $d$. Given an arbitrary polynomial $q$, we may write it in terms of its Fourier expansion as a sum of monomials $q = \sum \widehat{q}_\alpha x^\alpha$, in which case it suffices to show that $\pE p x^\alpha = 0$ for every bounded-degree monomial $x^\alpha$.
 
-Thus, let $q = x^\alpha$ and $\deg(q) = k \le d$. Then, $q$ may be written as the difference of two sum-of-squares polynomials, each of degree at most $\left\lfloor \frac{k+1}{2}\right\rfloor$. Indeed, we may write $x^\alpha = x^\beta x^\gamma$ for $\beta,\gamma$ each being the indicators on an arbitrary partition of the nonzero indices of $\alpha$ (of which there are at most $k$) into two sets of size at most $\left\lfloor \frac{k+1}{2}\right\rfloor$. Then,
+Thus, let $q = x^\alpha$ such that $\deg(q) = k \le d$ with $\deg (p)+k \le d$. Then, $q$ may be written as the difference of two sum-of-squares polynomials, each of degree at most $\left\lfloor \frac{k+1}{2}\right\rfloor$. Indeed, we may write $x^\alpha = x^\beta x^\gamma$ for $\beta,\gamma$ each being the indicators on an arbitrary partition of the nonzero indices of $\alpha$ (of which there are at most $k$) into two sets of size at most $\left\lfloor \frac{k+1}{2}\right\rfloor$. Then,
 \[ x^\alpha = \left( \frac{x^\beta + x^\gamma}{2} \right)^2 - \left( \frac{x^\beta - x^\gamma}{2} \right)^2. \]
-Note that each of the polynomials inside the squares is of degree $\left \lfloor \frac{k+1}{2} \right \rfloor$. If $p$ has even degree, the degree of $p \cdot \left( \frac{x^\beta + x^\gamma}{2} \right)^2$ is at most $d$ if $\deg (p q) \le d$. If $\deg(p)$ is odd on the other hand, the degree of $p \cdot \left( \frac{x^\beta + x^\gamma}{2} \right)^2$ is equal to $\deg(pq) + 1$, which is at most $d$ if $\deg(p q) \le d-1$.
+Note that each of the polynomials inside the squares is of degree $\left \lfloor \frac{k+1}{2} \right \rfloor$. If $p$ has even degree, the degree of $p \cdot \left( \frac{x^\beta + x^\gamma}{2} \right)^2$ is at most $d$ if $\deg (pq) \le d$. If $\deg(p)$ is odd on the other hand, the degree of $p \cdot \left( \frac{x^\beta + x^\gamma}{2} \right)^2$ is equal to $\deg(pq) + 1$, which is at most $d$ if $\deg(p q) \le d-1$.
 
 The desideratum follows since for such monomials, $\pE \left[ p \cdot \left( \frac{x^\beta+x^\gamma}{2} \right)^2 \right] = \pE \left[ p \cdot \left( \frac{x^\beta-x^\gamma}{2} \right)^2 \right] = 0$ by the discussion in the first paragraph.
 
