--- a/mysty.sty
+++ b/mysty.sty
@@ -72,6 +72,7 @@
 \newcommand{\F}{\mathbb{F}}
 \newcommand{\E}{\mathbb{E}}
 \newcommand{\wt}[1]{\widetilde{#1}}
+\newcommand{\wh}[1]{\widehat{#1}}
 \newcommand{\pE}{\widetilde{\E}}
 \newcommand{\vol}{\operatorname{vol}}
 \newcommand{\supp}{\operatorname{supp}}
