--- a/pset3-solutions.tex
+++ b/pset3-solutions.tex
@@ -211,7 +211,8 @@
 
     To conclude, we must show (i), that a random row of $\pE xx^\top$ is well-correlated with $x^*$. We may write
     \begin{equation}
-      \label{eq:q3-high-corr}
+      % \label{eq:q3-high-corr}
+      \nonumber
       (0.98-\eps) m \le \pE x^\top A x = 0.98 \cdot \frac{C \log n}{n} \pE \langle x , x^* \rangle^2 + \left\langle \pE xx^\top , A - 0.98 \cdot \frac{C\log n}{n} (x^*)(x^*)^\top \right\rangle.
     \end{equation}
     By the operator norm bound from earlier, and the concentration of the number of clauses, we have
