--- a/pset2-solutions.tex
+++ b/pset2-solutions.tex
@@ -76,7 +76,7 @@
 \newcommand{\Ind}[1]{\mathbf{1}\left ( #1\right )}
 
 % Title and author information
-\title{Problem Set 1 -- Solutions}
+\title{Problem Set 2 Solutions}
 \author{Samuel B. Hopkins}
 \date{\today}
 
